service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-login-service
spec:
  selector:
    app: simple-login
  ports:
    - port: 80
      targetPort: 8080
